--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <h1>ECOVERDE</h1>
 
         <nav>
-            <a href="#">Início</a>
-            <a href="#">Sobre</a>
-            <a href="#">Contato</a>
+            <a href="index.html">Início</a>
+            <a href="sobre.html">Sobre</a>
+            <a href="contato.html">Contato</a>
         </nav>
     </header>
 
